--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
 <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-<script src="vega_js.js"></script>
+<script src="js/vega_js.js"></script>
 <title>First vega-lite graph </title>
 </head>
 <body>
