--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
-<script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
-<script src="js/vega_js.js"></script>
-<title>First vega-lite graph </title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
+    <script src="js/vega_js.js"></script>
+    <title>First vega-lite graph </title>
 </head>
+
 <body>
-<h1>First vega-lite graph</h1>
-<div id="chart">
+    <h1>First vega-lite graph</h1>
+    <div id="chart">
+        <script type="text/javascript">
+            var spec2 = "js/Map_vega.vg.json";
+            vegaEmbed('#Map_map', spec2).then(function (result) {
+            }).catch(console.error);
+        </script>
+    </div>
+    <div id="chart2"></div>
     <script type="text/javascript">
-    var spec2 = "js/Map_vega.vg.json";
-    vegaEmbed('#symbol_map', spec2).then(function (result) {
-    }).catch(console.error);
-  </script>
-  </div>
-<div id="chart2"></div>
+        var spec2 = "js/boxandwhisker_vega.vg.json";
+        vegaEmbed('#boxandwhisker_map', spec2).then(function (result) {
+        }).catch(console.error);
+    </script>
+    <div id="chart3"></div>
     <script type="text/javascript">
-    var spec2 = "js/boxandwhisker_vega.vg.json";
-    vegaEmbed('#symbol_map', spec2).then(function (result) {
-    }).catch(console.error);
-  </script>
-<div id="chart3"></div>
-    <script type="text/javascript">
-    var spec2 = "js/idiom3_vega.vg.json";
-    vegaEmbed('#symbol_map', spec2).then(function (result) {
-    }).catch(console.error);
-  </script>
-<div id="chart4">
-    <script type="text/javascript">
-    var spec2 = "js/testidiom_vega.vg.json";
-    vegaEmbed('#symbol_map', spec2).then(function (result) {
-    }).catch(console.error);
-  </script></div>
+        var spec2 = "js/idiom3_vega.vg.json";
+        vegaEmbed('#idiom3_map', spec2).then(function (result) {
+        }).catch(console.error);
+    </script>
+    <div id="chart4">
+        <script type="text/javascript">
+            var spec2 = "js/testidiom_vega.vg.json";
+            vegaEmbed('#testidiom_map', spec2).then(function (result) {
+            }).catch(console.error);
+        </script>
+    </div>
 </body>
+
 </html>
