--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
     <div id="chart">
         <script type="text/javascript">
             var spec2 = "js/Map_vega.vg.json";
-            vegaEmbed('#Map_map', spec2).then(function (result) {
+            vegaEmbed('#Map_vega', spec2).then(function (result) {
             }).catch(console.error);
         </script>
     </div>
     <div id="chart2"></div>
     <script type="text/javascript">
         var spec2 = "js/boxandwhisker_vega.vg.json";
-        vegaEmbed('#boxandwhisker_map', spec2).then(function (result) {
+        vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
         }).catch(console.error);
     </script>
     <div id="chart3"></div>
     <script type="text/javascript">
         var spec2 = "js/idiom3_vega.vg.json";
-        vegaEmbed('#idiom3_map', spec2).then(function (result) {
+        vegaEmbed('#idiom3_vega', spec2).then(function (result) {
         }).catch(console.error);
     </script>
     <div id="chart4">
         <script type="text/javascript">
             var spec2 = "js/testidiom_vega.vg.json";
-            vegaEmbed('#testidiom_map', spec2).then(function (result) {
+            vegaEmbed('#testidiom_vega', spec2).then(function (result) {
             }).catch(console.error);
         </script>
     </div>
