--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <script type="text/javascript">
             var spec1 = "js/Map_vega.vg.json";
             vegaEmbed('#Map_vega', spec1).then(function (result) {
+                // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
             }).catch(console.error);
         </script>
     </div>
@@ -26,18 +27,21 @@
     <script type="text/javascript">
         var spec2 = "js/boxandwhisker_vega.vg.json";
         vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
+            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
     </script>
     <div id="chart3"></div>
     <script type="text/javascript">
         var spec3 = "js/idiom3_vega.vg.json";
         vegaEmbed('#idiom3_vega', spec3).then(function (result) {
+            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
     </script>
     <div id="chart4">
         <script type="text/javascript">
             var spec4 = "js/testidiom_vega.vg.json";
             vegaEmbed('#testidiom_vega', spec4).then(function (result) {
+                // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
             }).catch(console.error);
         </script>
     </div>
