--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <title>NBA Statistics</title>
+    <title textaline>NBA Statistics</title>
 </head>
 
 <body>
     <h1>First vega-lite graph</h1>
-    <div id="chart">
+    <div id="Map_vega">
         <script type="text/javascript">
             var spec1 = "js/Map_vega.vg.json";
             vegaEmbed('#Map_vega', spec1).then(function (result) {
@@ -23,21 +23,21 @@
             }).catch(console.error);
         </script>
     </div>
-    <div id="chart2"></div>
+    <div id="boxandwhisker_vega"></div>
     <script type="text/javascript">
         var spec2 = "js/boxandwhisker_vega.vg.json";
         vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
             // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
     </script>
-    <div id="chart3"></div>
+    <div id="idiom3_vega"></div>
     <script type="text/javascript">
         var spec3 = "js/idiom3_vega.vg.json";
         vegaEmbed('#idiom3_vega', spec3).then(function (result) {
             // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
     </script>
-    <div id="chart4">
+    <div id="testidiom_vega">
         <script type="text/javascript">
             var spec4 = "js/testidiom_vega.vg.json";
             vegaEmbed('#testidiom_vega', spec4).then(function (result) {
