--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
     <link rel="stylesheet" href="css/styles.css">
-    <title textaline>NBA Statistics</title>
+    <title><center>NBA Statistics</center></title>
 </head>
 
 <body>
