--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@2.1.0/build/pure-min.css" integrity="sha384-yHIFVG6ClnONEA5yB5DJXfW2/KC173DIQrYoZMEtBvGzmf0PKiGyNEqe9N6BNDBH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
-    <title><center>NBA Statistics</center></title>
+    <title>NBA Statistics</title>
 </head>
 
 <body>
-    <h1>First vega-lite graph</h1>
+    <h1 style="text-align:center">NBA Statistics</h1>
     <div id="Map_vega">
         <script type="text/javascript">
             var spec1 = "js/Map_vega.vg.json";
