--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <h1 style="text-align: center; font-family: Noto Sans;">NBA Statistics</h1>
+    <h1 style="text-align: center; font-family: Noto Sans; font-size: 100; font-weight: bold;">NBA Statistics</h1>
     <div id="Map_vega">
         <script type="text/javascript">
             var spec1 = "js/Map_vega.vg.json";
