--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 </head>
 
 <body>
+    <div><img src="https://cdn.pixabay.com/photo/2015/09/09/20/33/basketball-933173__340.jpg" alt="NBA photo">
     <h1 style="text-align: center; font-family: Noto Sans; font-size: 100; font-weight: bold;">NBA Statistics</h1>
-    <div id="Map_vega">
+    <div id="Map_vega" style="">
         <script type="text/javascript">
             var spec1 = "js/Map_vega.vg.json";
             vegaEmbed('#Map_vega', spec1).then(function (result) {
@@ -48,6 +49,7 @@
                 // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
             }).catch(console.error);
         </script>
+    </div>
     </div>
 </body>
 
