--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <div><img src="https://cdn.pixabay.com/photo/2015/09/09/20/33/basketball-933173__340.jpg" alt="NBA photo">
     <h1 style="text-align: center; font-family: Noto Sans; font-size: 100; font-weight: bold;">NBA Statistics</h1>
-    <div id="Map_vega">
+    <div id="Map_vega" class="pure-u-3-4">
         <script type="text/javascript">
             var spec1 = "js/Map_vega.vg.json";
             vegaEmbed('#Map_vega', spec1).then(function (result) {
