--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
                     }).catch(console.error);
                 </script>
             </div>
+            <div class ="pure-u-4-4">
+                <p>
+                    Barbara had been waiting at the table for twenty minutes. 
+                    it had been twenty long and excruciating minutes. 
+                    David had promised that he would be on time today. 
+                    He never was, but he had promised this one time. 
+                    She had made him repeat the promise multiple times over the last week until she'd believed his promise. 
+                    Now she was paying the price.
+                </p>
+            </div>
         </div>
         <!--row 2-->
         <div class="pure-g">
