--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body scr="https://cdn.pixabay.com/photo/2015/09/09/20/33/basketball-933173__340.jpg">
-    <div><img src="https://cdn.pixabay.com/photo/2015/09/09/20/33/basketball-933173__340.jpg" alt="NBA photo">
+    <div>
         <h1 style="text-align: center; font-family: Noto Sans; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div class="pure-g">
