--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>NBA Statistics</title>
 </head>
 
-<body scr="https://cdn.pixabay.com/photo/2015/09/09/20/33/basketball-933173__340.jpg">
+<body>
     <div>
         <h1 style="text-align: center; font-family: Noto Sans; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
