--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <div>
-        <h1 style="text-align: center; font-family: Noto Sans; font-size: 100; font-weight: bold;">NBA Statistics</h1>
+        <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div class="pure-g">
             <div id="Map_vega" class="pure-u-3-4">
