--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div class="pure-g">
-            <div id="Map_vega" class="pure-u-3-4">
+            <div id="Map_vega" class="pure-u-3-5" style="padding-left: 50;">
                 <script type="text/javascript">
                     var spec1 = "js/Map_vega.vg.json";
                     vegaEmbed('#Map_vega', spec1).then(function (result) {
@@ -31,31 +31,21 @@
                     }).catch(console.error);
                 </script>
             </div>
-            <div class ="pure-u-1-4">
+            <div class="pure-u-2-5">
                 <p>
-                    Barbara had been waiting at the table for twenty minutes. 
-                    it had been twenty long and excruciating minutes. 
-                    David had promised that he would be on time today. 
-                    He never was, but he had promised this one time. 
-                    She had made him repeat the promise multiple times over the last week until she'd believed his promise. 
+                    Barbara had been waiting at the table for twenty minutes.
+                    it had been twenty long and excruciating minutes.
+                    David had promised that he would be on time today.
+                    He never was, but he had promised this one time.
+                    She had made him repeat the promise multiple times over the last week until she'd believed his
+                    promise.
                     Now she was paying the price.
                 </p>
             </div>
         </div>
         <!--row 2-->
         <div class="pure-g">
-            <div id="boxandwhisker_vega">
-                <script type="text/javascript">
-                    var spec2 = "js/boxandwhisker_vega.vg.json";
-                    vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
-                        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-                    }).catch(console.error);
-                </script>
-            </div>
-        </div>
-        <!--row 3-->
-        <div class="pure-g">
-            <div id="idiom3_vega">
+            <div id="idiom3_vega" class="pure">
                 <script type="text/javascript">
                     var spec3 = "js/idiom3_vega.vg.json";
                     vegaEmbed('#idiom3_vega', spec3).then(function (result) {
@@ -64,6 +54,7 @@
                 </script>
             </div>
         </div>
+        <!--row 3-->
         <div class="pure-g">
             <div id="testidiom_vega">
                 <script type="text/javascript">
@@ -72,6 +63,39 @@
                         // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
                     }).catch(console.error);
                 </script>
+            </div>
+            <div id="boxandwhisker_vega" class="pure-u-3-5">
+                <script type="text/javascript">
+                    var spec2 = "js/boxandwhisker_vega.vg.json";
+                    vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
+                        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+                    }).catch(console.error);
+                </script>
+            </div>
+        </div>
+        <!--row 4-->
+        <div class="pure-g">
+            <div class="pure-u-2-5">
+                <p>
+                    Barbara had been waiting at the table for twenty minutes.
+                    it had been twenty long and excruciating minutes.
+                    David had promised that he would be on time today.
+                    He never was, but he had promised this one time.
+                    She had made him repeat the promise multiple times over the last week until she'd believed his
+                    promise.
+                    Now she was paying the price.
+                </p>
+            </div>
+            <div class="pure-u-2-5">
+                <p>
+                    Barbara had been waiting at the table for twenty minutes.
+                    it had been twenty long and excruciating minutes.
+                    David had promised that he would be on time today.
+                    He never was, but he had promised this one time.
+                    She had made him repeat the promise multiple times over the last week until she'd believed his
+                    promise.
+                    Now she was paying the price.
+                </p>
             </div>
         </div>
     </div>
