--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <!--row 2-->
         <div class="pure-g">
-            <div id="idiom3_vega" class="pure">
+            <div id="idiom3_vega" class="pure-u-3-5">
                 <script type="text/javascript">
                     var spec3 = "js/idiom3_vega.vg.json";
                     vegaEmbed('#idiom3_vega', spec3).then(function (result) {
