--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <div>
+    <div style="margin-top:5%;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
-        <div class="pure-g">
+        <div style="margin-left:5%; background-color: bisque; width:90%; height:400px; margin-right: 5%;">
             <div id="Map_vega" class="pure-u-3-5" style="padding-left: 50;">
                 <script type="text/javascript">
                     var spec1 = "js/Map_vega.vg.json";
