--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 </head>
 
 <body>
-    <div style="margin-top:5%;">
+    <div style="margin-top:3%;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="margin-left:5%; background-color: bisque; width:90%; height:400px; margin-right: 5%;">
-            <div id="Map_vega" style="width: 60%; height:100%">
+            <div id="Map_vega" style="width: 60%; height:300px">
                 <script type="text/javascript">
                     var spec1 = "js/Map_vega.vg.json";
                     vegaEmbed('#Map_vega', spec1).then(function (result) {
@@ -31,7 +31,7 @@
                     }).catch(console.error);
                 </script>
             </div>
-            <div style="margin-left:70%; width:30%; height:100%">
+            <div style="margin-left:70%; width:30%; height:300px">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
