--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <div style="margin-top:3%;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
-        <div class="row_1">
-            <div class="first">
+        <div style="width:90%; height: 500px;;margin-left: 5%; display: flex;">
+            <div style="width:60%;height: fit-content; margin-left: 5%;">
                 <div id="Map_vega" style="width: 60%; height:300px">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
@@ -33,7 +33,7 @@
                     </script>
                 </div>
             </div>
-            <div class="second">
+            <div style="width:60%;height: fit-content; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
