--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div style="margin-top:3%;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
-        <div style="width:90%; height: 500px;;margin-left: 5%; display: flex;background-color: aqua;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display: flex;background-color: aqua;">
             <div style="width:60%;height: fit-content; margin-left: 5%;">
                 <div id="Map_vega" style="width: 60%; height:300px">
                     <script type="text/javascript">
