--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </script>
                 </div>
             </div>
-            <div style="width:60%;height: fit-content; margin-left: 5%;">
+            <div style="width:60%;height: 500px; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
