--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: aqua;">
             <div style="width:60%;height: fit-content; margin-left: 5%;">
-                <div id="Map_vega" style="width: 60%; height:300px">
+                <div id="Map_vega">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
                         vegaEmbed('#Map_vega', spec1).then(function (result) {
