--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: aqua;">
-            <div style="width:60%;height: fit-content; margin-left: 5%;">
+            <div style="width:60%;height: 500px; margin-left: 5%;">
                 <div id="Map_vega">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
@@ -33,7 +33,7 @@
                     </script>
                 </div>
             </div>
-            <div style="width:60%;height: 500px; margin-left: 5%;">
+            <div style="width:25%;height: 500px; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
@@ -53,9 +53,9 @@
             </div>
         </div>
         <!--row 2-->
-        <div sstyle="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: red; margin-top:3%">
-            <div>
-                <div id="idiom3_vega" class="pure-u-3-5">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: plum; margin-top:3%">
+            <div style="width:60%;height: fit-content; margin-left: 5%;">
+                <div id="idiom3_vega">
                     <script type="text/javascript">
                         var spec3 = "js/idiom3_vega.vg.json";
                         vegaEmbed('#idiom3_vega', spec3).then(function (result) {
@@ -64,8 +64,22 @@
                     </script>
                 </div>
             </div>
-            <div class="pure-u-2-5">
+            <div style="width:25%;height: 500px; margin-left: 5%;">
                 <p>
+                    Barbara had been waiting at the table for twenty minutes.
+                    it had been twenty long and excruciating minutes.
+                    David had promised that he would be on time today.
+                    He never was, but he had promised this one time.
+                    She had made him repeat the promise multiple times over the last week until she'd believed his
+                    promise.
+                    Now she was paying the price.
+                    Barbara had been waiting at the table for twenty minutes.
+                    it had been twenty long and excruciating minutes.
+                    David had promised that he would be on time today.
+                    He never was, but he had promised this one time.
+                    She had made him repeat the promise multiple times over the last week until she'd believed his
+                    promise.
+                    Now she was paying the price.
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
                     David had promised that he would be on time today.
@@ -77,27 +91,31 @@
             </div>
         </div>
         <!--row 3-->
-        <div class="pure-g">
-            <div id="testidiom_vega">
-                <script type="text/javascript">
-                    var spec4 = "js/testidiom_vega.vg.json";
-                    vegaEmbed('#testidiom_vega', spec4).then(function (result) {
-                        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-                    }).catch(console.error);
-                </script>
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gold; margin-top:3%">
+            <div style="width:60%;height: fit-content; margin-left: 5%;">
+                <div id="testidiom_vega">
+                    <script type="text/javascript">
+                        var spec4 = "js/testidiom_vega.vg.json";
+                        vegaEmbed('#testidiom_vega', spec4).then(function (result) {
+                            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+                        }).catch(console.error);
+                    </script>
+                </div>
             </div>
-            <div id="boxandwhisker_vega" class="pure-u-3-5">
-                <script type="text/javascript">
-                    var spec2 = "js/boxandwhisker_vega.vg.json";
-                    vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
-                        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-                    }).catch(console.error);
-                </script>
+            <div style="width:25%;height: 500px; margin-left: 5%;">
+                <div id="boxandwhisker_vega">
+                    <script type="text/javascript">
+                        var spec2 = "js/boxandwhisker_vega.vg.json";
+                        vegaEmbed('#boxandwhisker_vega', spec2).then(function (result) {
+                            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+                        }).catch(console.error);
+                    </script>
+                </div>
             </div>
         </div>
         <!--row 4-->
-        <div class="pure-g">
-            <div class="pure-u-2-5">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gray; margin-top:3%">
+            <div style="width:60%;height: fit-content; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
@@ -108,7 +126,7 @@
                     Now she was paying the price.
                 </p>
             </div>
-            <div class="pure-u-2-5">
+            <div style="width:25%;height: 500px; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
