--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
         <!--row 3-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gold; margin-top:3%">
-            <div style="width:60%;height: fit-content; margin-left: 5%;">
+            <div style="width:60%;height: 500px; margin-left: 5%;">
                 <div id="testidiom_vega">
                     <script type="text/javascript">
                         var spec4 = "js/testidiom_vega.vg.json";
