--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
         </div>
         <!--row 3-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gold; margin-top:3%">
-            <div style="width:60%;height: 500px; margin-left: 5%;">
-                <div id="testidiom_vega">
+            <div style="width:66%;height: 500px; margin-left: 2%;">
+                <div id="testidiom_vega";">
                     <script type="text/javascript">
                         var spec4 = "js/testidiom_vega.vg.json";
                         vegaEmbed('#testidiom_vega', spec4).then(function (result) {
@@ -102,7 +102,7 @@
                     </script>
                 </div>
             </div>
-            <div style="width:25%;height: 500px; margin-left: 5%;">
+            <div style="width:25%;height: 500px; margin-right: 2%;">
                 <div id="boxandwhisker_vega">
                     <script type="text/javascript">
                         var spec2 = "js/boxandwhisker_vega.vg.json";
