--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: aqua;">
-            <div style="width:66%;height: 500px; margin-left: 2%;">
+            <div style="width:66%;height: 500px; margin-left: 1%;">
                 <div id="Map_vega">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
@@ -53,8 +53,8 @@
             </div>
         </div>
         <!--row 2-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: plum; margin-top:3%">
-            <div style="width:60%;height: fit-content; margin-left: 5%;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: plum;">
+            <div style="width:66%;height: fit-content; margin-left: 1%;">
                 <div id="idiom3_vega">
                     <script type="text/javascript">
                         var spec3 = "js/idiom3_vega.vg.json";
@@ -91,7 +91,7 @@
             </div>
         </div>
         <!--row 3-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gold; margin-top:3%">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gold;">
             <div style="width:66%;height: 500px; margin-left: 2%;">
                 <div id="testidiom_vega";">
                     <script type="text/javascript">
@@ -114,7 +114,7 @@
             </div>
         </div>
         <!--row 4-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gray; margin-top:3%">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gray;">
             <div style="width:60%;height: fit-content; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
