--- a/index.html
+++ b/index.html
@@ -23,17 +23,8 @@
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: aqua;">
-            <div style="width:66%;height: 500px; margin-left: 1%;">
-                <div id="Map_vega">
-                    <script type="text/javascript">
-                        var spec1 = "js/Map_vega.vg.json";
-                        vegaEmbed('#Map_vega', spec1).then(function (result) {
-                            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-                        }).catch(console.error);
-                    </script>
-                </div>
-            </div>
             <div style="width:25%;height: 500px; margin-left: 5%;">
+                <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
@@ -50,6 +41,16 @@
                     promise.
                     Now she was paying the price.
                 </p>
+            </div>
+            <div style="width:66%;height: 500px; margin-left: 1%;">
+                <div id="Map_vega">
+                    <script type="text/javascript">
+                        var spec1 = "js/Map_vega.vg.json";
+                        vegaEmbed('#Map_vega', spec1).then(function (result) {
+                            // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+                        }).catch(console.error);
+                    </script>
+                </div>
             </div>
         </div>
         <!--row 2-->
