--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: aqua;">
-            <div style="width:25%;height: 500px; margin-left: 5%;">
+            <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;">
                 <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
