--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 </head>
 
 <body>
-    <div style="margin-top:3%;">
+    <div style="margin-top:1%;color: #f8f8d7dc">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: aqua;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #f8f8d7dc;">
             <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;">
                 <h2>this is a heading</h2>
                 <p>
@@ -54,7 +54,7 @@
             </div>
         </div>
         <!--row 2-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: plum;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#f8f8d7dc;">
             <div style="width:66%;height: fit-content; margin-left: 1%;">
                 <div id="idiom3_vega">
                     <script type="text/javascript">
@@ -92,7 +92,7 @@
             </div>
         </div>
         <!--row 3-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gold;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #f8f8d7dc;">
             <div style="width:66%;height: 500px; margin-left: 2%;">
                 <div id="testidiom_vega";">
                     <script type="text/javascript">
@@ -115,7 +115,7 @@
             </div>
         </div>
         <!--row 4-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: gray;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #f8f8d7dc;">
             <div style="width:60%;height: fit-content; margin-left: 5%;">
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
