--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     </script>
                 </div>
             </div>
-            <div style="width:25%;height: 500px; margin-left: 5%;">
+            <div style="width:25%;height: 500px; margin-left: 5%;margin-top: 1%;">
+                <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
@@ -117,6 +118,7 @@
         <!--row 4-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #f8f8d7dc;">
             <div style="width:60%;height: fit-content; margin-left: 5%;">
+                <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
@@ -128,6 +130,7 @@
                 </p>
             </div>
             <div style="width:25%;height: 500px; margin-left: 5%;">
+                <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
