--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!--row 3-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #f8f8d7da;">
             <div style="width:66%;height: 500px; margin-left: 2%;">
-                <div id="testidiom_vega";">
+                <div id="testidiom_vega">
                     <script type="text/javascript">
                         var spec4 = "js/testidiom_vega.vg.json";
                         vegaEmbed('#testidiom_vega', spec4).then(function (result) {
