--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #f8f8d7a4;">
-            <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;">
+            <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;" >
                 <h2>this is a heading</h2>
-                <p>
+                <p style="color:black">
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
                     David had promised that he would be on time today.
