--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div style="margin-top:1%;color: #f8f8d7a4">
+    <div style="margin-top:1%;background-color: #f8f8d7a4">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #f8f8d7a4;">
