--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div style="margin-top:1%;background-color: #f8f8d7a4">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
         <!--row 1-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #f7f79c;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #fcfcb8;">
             <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;" >
                 <h2>this is a heading</h2>
                 <p>
@@ -61,7 +61,7 @@
             </div>
         </div>
         <!--row 2-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#f7f79c;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#fcfcb8;">
             <div style="width:25%;height: 500px; margin-left: 5%;margin-top: 1%;">
                 <h2>this is a heading</h2>
                 <p>
@@ -110,7 +110,7 @@
             </div>
         </div>
         <!--row 3-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #f7f79c;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #fcfcb8;">
             <div style="width:66%;height: 400px; margin-left: 2%;">
                 <div id="testidiom_vega">
                     <script type="text/javascript">
