--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 </head>
 
 <body>
-    <div style="margin-top:1%;">
+    <div style="margin-top:1%;background-color: #FFFFC2;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
+    </div>
+    <div style="margin-top:1%; border-radius: 10px;">
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #FFFFC2;">
             <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;" >
