--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 </head>
 
 <body>
-    <div style="margin-top:1%;background-color: #FFFFC2;">
+    <div style="margin-top:1%;background-color: #FFFFC2; width:90%; margin-left: 5%;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
     </div>
-    <div style="margin-top:1%; border-radius: 10px;">
+    <div style="margin-top:1%;">
         <!--row 1-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #FFFFC2;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #FFFFC2;border-radius: 30px;">
             <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;" >
                 <h2>this is a heading</h2>
                 <p>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <!--row 2-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#FFFFC2;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#FFFFC2;border-radius: 30px;">
             <div style="width:25%;height: 500px; margin-left: 5%;margin-top: 1%;">
                 <h2>this is a heading</h2>
                 <p>
@@ -112,7 +112,7 @@
             </div>
         </div>
         <!--row 3-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #FFFFC2;">
+        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #FFFFC2;border-radius: 30px;">
             <div style="width:66%;height: 400px; margin-left: 2%;">
                 <div id="testidiom_vega">
                     <script type="text/javascript">
