--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div style="margin-top:1%;">
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #FFFFC2;border-radius: 30px;">
-            <div style="width:25%;height: 500px; margin-left: 5%;margin-top:1%;" >
+            <div style="width:25%;height: 500px; margin-left: 5%;" >
                 <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
@@ -64,7 +64,7 @@
         </div>
         <!--row 2-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#FFFFC2;border-radius: 30px;">
-            <div style="width:25%;height: 500px; margin-left: 5%;margin-top: 1%;">
+            <div style="width:25%;height: 500px; margin-left: 5%;">
                 <h2>this is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
