--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <div style="margin-top:1%;background-color: #FFFFC2; width:90%; margin-left: 5%;">
+    <div style="margin-top:1%;background-color: #FFFFC2; width:90%; margin-left: 5%;border-radius: 30px;">
         <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
     </div>
     <div style="margin-top:1%;">
