--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!--row 1-->
         <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #FFFFC2;border-radius: 30px;">
             <div style="width:25%;height: 500px; margin-left: 5%;" >
-                <h2>this is a heading</h2>
+                <h2>This is a heading</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
                     it had been twenty long and excruciating minutes.
