--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
     <title>NBA Statistics</title>
 </head>
 
-<body style="background-color: #ffffcd;">
-    <div style="margin-top:1%;background-color: #FFFFC2; width:90%; margin-left: 5%;border-radius: 30px;">
-        <h1 style="text-align: center; font-size: 100; font-weight: bold;">NBA Statistics</h1>
+<body style="background-color: crimson;">
+
+    <div style="margin-top:1%;background-color: White; width:70%; margin-left: 15%;border-radius: 30px; border:10px; border-color:DarkBlue; border-style:solid">
+   <img src="https://d1jh8w4crta3hl.cloudfront.net/thumbnail_large/NBA%20logo%20with%20words%20Transparent%20PNG_2264.jpeg" alt="NBA logo" style="width:50%; margin-left:25%">
     </div>
     <div style="margin-top:1%;">
         <!--row 1-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex;background-color: #FFFFC2;border-radius: 30px;">
-            <div style="width:25%;height: 500px; margin-left: 5%;" >
+        <div style="width:70%; height: 500px;margin-left: 15%; display:flex;background-color: white;border-radius: 30px;border:10px; border-color:DarkBlue; border-style:solid">
+            <div style="width:25%;height: 500px; margin-left: 5%;">
+            <h1 style="text-align: left; padding-left:5%; font-size: 100; font-weight: bold;">NBA Statistics</h1>
                 <h2>This is a heading lol</h2>
                 <p>
                     Barbara had been waiting at the table for twenty minutes.
@@ -51,7 +53,8 @@
                     Now she was paying the price.
                 </p>
             </div>
-            <div style="width:66%;height: 500px; margin-left: 1%;">
+            <div style="width:62%;height: 500px; margin-left: 5%; margin-right:5%; margin-top:7%;">
+            <img src="https://cdn.nba.com/manage/2020/10/AS20-Starters-T1-FrostyChiTowngraphic-784x441.jpg" style="border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
                 <div id="Map_vega">
                     <script type="text/javascript">
                         var spec1 = "js/Map_vega.vg.json";
@@ -63,7 +66,7 @@
             </div>
         </div>
         <!--row 2-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color:#FFFFC2;border-radius: 30px;">
+        <div style="width:70%; height: 500px;margin-left: 15%; margin-top:1%; display:flex; background-color:white;border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
             <div style="width:25%;height: 500px; margin-left: 5%;">
                 <h2>this is a heading</h2>
                 <p>
@@ -112,7 +115,7 @@
             </div>
         </div>
         <!--row 3-->
-        <div style="width:90%; height: 500px;margin-left: 5%; display:flex; background-color: #FFFFC2;border-radius: 30px;">
+        <div style="width:70%; height: 500px;margin-left: 15%; margin-top:1%; display:flex; background-color: White;border:10px; border-color:DarkBlue; border-style:solid; border-radius:30px">
             <div style="width:66%;height: 400px; margin-left: 2%;">
                 <div id="testidiom_vega">
                     <script type="text/javascript">
